2017-04-11  Stipe Tolj  <stolj at kannel.org>
    * gw/smsc/http/generic.c: provides the missing MO part for the generic type
      from the patchset dated 2017-03-14, allowing to send UTF-8 data, which
      can then be forwarded as UCS-2 towards the smsbox connection. We transcode
      ONLY if an alt-charset is set and a coding value has been provided.

2017-04-10  Stipe Tolj  <stolj at kannel.org>
    * gw/smsc/smsc_http.c: fix transcoding by using UTF-16BE as UCS-2 encoding 
      indication.

2017-03-14  Stipe Tolj  <stolj at kannel.org>
    * doc/userguide/userguide.xml: remove 'wapme' reference for HTTP SMSC type.
    * gw/smsc/smsc_http.c: re-considering an older issue, when having UCS2 
      payload from the smsbox connection side. All major HTTP API will NEED
      a unique encoding that is injected, and we will use 'alt-charset = UTF-8'
      to allow setting a config diretive to convert ANY encoding to UTF-8
      towards the upstream, which reflects an unique input encoding, otherwise
      there is no way to distinguish this. This allows keeping the currentlogic 
      if no 'alt-charset' is set. 
    * gw/smsc/http/wapme.c: removed the 'wapme' type as it is dead for quite 
      some time now.
    This patchset ensures that we have a construct (via setting a config
    directive, alt-charset) to uniquely provision MTs to the upstream SMSC.
    [Msg-Id: <4D76BF9C.7070700@tolj.org>]
      
2017-02-22  Stipe Tolj  <stolj at kannel.org>
    * gwlib/http.c: fix missing keep-alive indication when we DO keep the 
      connection persistent as a server, cleaned up the corresponding 
      negotiation constraint to fit the RFC2616 requirement.
      
2017-01-04  Stipe Tolj  <stolj at kannel.org>
    * gw/msg.h: add msg admin 'cmd_feature' to allow passing feature on/off 
      commands within the inter-box communication. NLC.
      
2017-01-10 Alexander Malysh <amalysh at kannel.org>
    * gwlib/octstr.c: deleted immutable assert from octstr_cat.
