@@ -129,6 +129,8 @@ SINGLE_GROUP(core,
     OCTSTR(ssl-server-cert-file)
     OCTSTR(ssl-server-key-file)
     OCTSTR(ssl-trusted-ca-file)
+    OCTSTR(ssl-client-cipher-list)
+    OCTSTR(ssl-server-cipher-list)
     OCTSTR(dlr-storage)
     OCTSTR(dlr-spool)
     OCTSTR(maximum-queue-length)    /* deprecated, supported until next major stable release */
